<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/original_value"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/original_value"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/original_value_view"
            android:singleLine="true"
            android:textColor="#000"
            android:maxLength="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/interest"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/interest_value"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/interest_view"
            android:singleLine="true"
            android:textColor="#000"
            android:maxLength="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/time"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/time"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/time_view"
            android:singleLine="true"
            android:textColor="#000"
            android:maxLength="3"/>

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/calculate"
            android:enabled="false"/>

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:textSize="30dp"
            android:textColor="@color/black"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>